Add two questions to initial cell

--- a/Bay_Area_Bike_Share_Analysis.ipynb
+++ b/Bay_Area_Bike_Share_Analysis.ipynb
@@ -16,7 +16,11 @@
     "\n",
     "**Question 1**: Write at least two questions you think could be answered by data.\n",
     "\n",
-    "**Answer**: Replace this text with your response!\n",
+    "**Answer**:\n",
+    "\n",
+    "What are the usage differences between the different types of passes (i.e. yearly/3-day/24-hours?\n",
+    "\n",
+    "Are the overtime fees a significant portion of income or would it be more profitable to charge a bit more for the services overall and remove the overtime fees?\n",
     "\n",
     "> **Tip**: If you double click on this cell, you will see the text change so that all of the formatting is removed. This allows you to edit this block of text. This block of text is written using [Markdown](http://daringfireball.net/projects/markdown/syntax), which is a way to format text using headers, links, italics, and many other options. You will learn more about Markdown later in the Nanodegree Program. Hit **Shift** + **Enter** or **Shift** + **Return**."
    ]
@@ -545,21 +549,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py3]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-py3-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
