Add answer to question 2

--- a/Bay_Area_Bike_Share_Analysis.ipynb
+++ b/Bay_Area_Bike_Share_Analysis.ipynb
@@ -37,7 +37,10 @@
     "\n",
     "**Question 2**: What visualizations do you think provide the most interesting insights? Are you able to answer either of the questions you identified above based on Tyler’s analysis? Why or why not?\n",
     "\n",
-    "**Answer**: Replace this text with your response!"
+    "**Answer**: \n",
+    "The line chart showing rides per day with the ability to highlight weekends is most interesting.\n",
+    "\n",
+    "I believe the analysis both the questions. It appears that it is more profitable to keep the overage use charges and that customers actually ride longer to their own detriment despite having cheaper options."
    ]
   },
   {
