--- a/Bay_Area_Bike_Share_Analysis.ipynb
+++ b/Bay_Area_Bike_Share_Analysis.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -116,11 +116,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Trip ID</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Start Date</th>\n",
+       "      <th>Start Station</th>\n",
+       "      <th>Start Terminal</th>\n",
+       "      <th>End Date</th>\n",
+       "      <th>End Station</th>\n",
+       "      <th>End Terminal</th>\n",
+       "      <th>Bike #</th>\n",
+       "      <th>Subscription Type</th>\n",
+       "      <th>Zip Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4576</td>\n",
+       "      <td>63</td>\n",
+       "      <td>8/29/2013 14:13</td>\n",
+       "      <td>South Van Ness at Market</td>\n",
+       "      <td>66</td>\n",
+       "      <td>8/29/2013 14:14</td>\n",
+       "      <td>South Van Ness at Market</td>\n",
+       "      <td>66</td>\n",
+       "      <td>520</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>94127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4607</td>\n",
+       "      <td>70</td>\n",
+       "      <td>8/29/2013 14:42</td>\n",
+       "      <td>San Jose City Hall</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8/29/2013 14:43</td>\n",
+       "      <td>San Jose City Hall</td>\n",
+       "      <td>10</td>\n",
+       "      <td>661</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>95138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4130</td>\n",
+       "      <td>71</td>\n",
+       "      <td>8/29/2013 10:16</td>\n",
+       "      <td>Mountain View City Hall</td>\n",
+       "      <td>27</td>\n",
+       "      <td>8/29/2013 10:17</td>\n",
+       "      <td>Mountain View City Hall</td>\n",
+       "      <td>27</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>97214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4251</td>\n",
+       "      <td>77</td>\n",
+       "      <td>8/29/2013 11:29</td>\n",
+       "      <td>San Jose City Hall</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8/29/2013 11:30</td>\n",
+       "      <td>San Jose City Hall</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>95060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4299</td>\n",
+       "      <td>83</td>\n",
+       "      <td>8/29/2013 12:02</td>\n",
+       "      <td>South Van Ness at Market</td>\n",
+       "      <td>66</td>\n",
+       "      <td>8/29/2013 12:04</td>\n",
+       "      <td>Market at 10th</td>\n",
+       "      <td>67</td>\n",
+       "      <td>319</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>94103</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Trip ID  Duration       Start Date             Start Station  \\\n",
+       "0     4576        63  8/29/2013 14:13  South Van Ness at Market   \n",
+       "1     4607        70  8/29/2013 14:42        San Jose City Hall   \n",
+       "2     4130        71  8/29/2013 10:16   Mountain View City Hall   \n",
+       "3     4251        77  8/29/2013 11:29        San Jose City Hall   \n",
+       "4     4299        83  8/29/2013 12:02  South Van Ness at Market   \n",
+       "\n",
+       "   Start Terminal         End Date               End Station  End Terminal  \\\n",
+       "0              66  8/29/2013 14:14  South Van Ness at Market            66   \n",
+       "1              10  8/29/2013 14:43        San Jose City Hall            10   \n",
+       "2              27  8/29/2013 10:17   Mountain View City Hall            27   \n",
+       "3              10  8/29/2013 11:30        San Jose City Hall            10   \n",
+       "4              66  8/29/2013 12:04            Market at 10th            67   \n",
+       "\n",
+       "   Bike # Subscription Type Zip Code  \n",
+       "0     520        Subscriber    94127  \n",
+       "1     661        Subscriber    95138  \n",
+       "2      48        Subscriber    97214  \n",
+       "3      26        Subscriber    95060  \n",
+       "4     319        Subscriber    94103  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sample_data = pd.read_csv('201309_trip_data.csv')\n",
     "\n",
