Run station mapping

--- a/Bay_Area_Bike_Share_Analysis.ipynb
+++ b/Bay_Area_Bike_Share_Analysis.ipynb
@@ -261,11 +261,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>dockcount</th>\n",
+       "      <th>landmark</th>\n",
+       "      <th>installation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>San Jose Diridon Caltrain Station</td>\n",
+       "      <td>37.329732</td>\n",
+       "      <td>-121.901782</td>\n",
+       "      <td>27</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/6/2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>San Jose Civic Center</td>\n",
+       "      <td>37.330698</td>\n",
+       "      <td>-121.888979</td>\n",
+       "      <td>15</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/5/2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Santa Clara at Almaden</td>\n",
+       "      <td>37.333988</td>\n",
+       "      <td>-121.894902</td>\n",
+       "      <td>11</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/6/2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Adobe on Almaden</td>\n",
+       "      <td>37.331415</td>\n",
+       "      <td>-121.893200</td>\n",
+       "      <td>19</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/5/2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>San Pedro Square</td>\n",
+       "      <td>37.336721</td>\n",
+       "      <td>-121.894074</td>\n",
+       "      <td>15</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>8/7/2013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   station_id                               name        lat        long  \\\n",
+       "0           2  San Jose Diridon Caltrain Station  37.329732 -121.901782   \n",
+       "1           3              San Jose Civic Center  37.330698 -121.888979   \n",
+       "2           4             Santa Clara at Almaden  37.333988 -121.894902   \n",
+       "3           5                   Adobe on Almaden  37.331415 -121.893200   \n",
+       "4           6                   San Pedro Square  37.336721 -121.894074   \n",
+       "\n",
+       "   dockcount  landmark installation  \n",
+       "0         27  San Jose     8/6/2013  \n",
+       "1         15  San Jose     8/5/2013  \n",
+       "2         11  San Jose     8/6/2013  \n",
+       "3         19  San Jose     8/5/2013  \n",
+       "4         15  San Jose     8/7/2013  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Display the first few rows of the station data file.\n",
     "station_info = pd.read_csv('201402_station_data.csv')\n",
