Create datetime fields

--- a/Bay_Area_Bike_Share_Analysis.ipynb
+++ b/Bay_Area_Bike_Share_Analysis.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -430,17 +430,17 @@
     "                    # convert duration units from seconds to minutes\n",
     "                    ### Question 3a: Add a mathematical operation below   ###\n",
     "                    ### to convert durations from seconds to minutes.     ###\n",
-    "                    new_point['duration'] = float(row['Duration']) ________\n",
+    "                    new_point['duration'] = float(row['Duration'])/60\n",
     "                    \n",
     "                    # reformat datestrings into multiple columns\n",
     "                    ### Question 3b: Fill in the blanks below to generate ###\n",
     "                    ### the expected time values.                         ###\n",
     "                    trip_date = datetime.strptime(row['Start Date'], '%m/%d/%Y %H:%M')\n",
     "                    new_point['start_date']  = trip_date.strftime('%Y-%m-%d')\n",
-    "                    new_point['start_year']  = trip_date.________\n",
-    "                    new_point['start_month'] = trip_date.________\n",
-    "                    new_point['start_hour']  = trip_date.________\n",
-    "                    new_point['weekday']     = trip_date.________\n",
+    "                    new_point['start_year']  = trip_date.year\n",
+    "                    new_point['start_month'] = trip_date.month\n",
+    "                    new_point['start_hour']  = trip_date.hour\n",
+    "                    new_point['weekday']     = trip_date.weekday()\n",
     "                    \n",
     "                    # remap start and end terminal with start and end city\n",
     "                    new_point['start_city'] = station_map[row['Start Terminal']]\n",
