Summarise data function worked correctly

--- a/Bay_Area_Bike_Share_Analysis.ipynb
+++ b/Bay_Area_Bike_Share_Analysis.ipynb
@@ -464,11 +464,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>start_year</th>\n",
+       "      <th>start_month</th>\n",
+       "      <th>start_hour</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>start_city</th>\n",
+       "      <th>end_city</th>\n",
+       "      <th>subscription_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.050000</td>\n",
+       "      <td>2013-08-29</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>Subscriber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.166667</td>\n",
+       "      <td>2013-08-29</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>Subscriber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.183333</td>\n",
+       "      <td>2013-08-29</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mountain View</td>\n",
+       "      <td>Mountain View</td>\n",
+       "      <td>Subscriber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.283333</td>\n",
+       "      <td>2013-08-29</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>Subscriber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.383333</td>\n",
+       "      <td>2013-08-29</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>Subscriber</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   duration  start_date  start_year  start_month  start_hour  weekday  \\\n",
+       "0  1.050000  2013-08-29        2013            8          14        3   \n",
+       "1  1.166667  2013-08-29        2013            8          14        3   \n",
+       "2  1.183333  2013-08-29        2013            8          10        3   \n",
+       "3  1.283333  2013-08-29        2013            8          11        3   \n",
+       "4  1.383333  2013-08-29        2013            8          12        3   \n",
+       "\n",
+       "      start_city       end_city subscription_type  \n",
+       "0  San Francisco  San Francisco        Subscriber  \n",
+       "1       San Jose       San Jose        Subscriber  \n",
+       "2  Mountain View  Mountain View        Subscriber  \n",
+       "3       San Jose       San Jose        Subscriber  \n",
+       "4  San Francisco  San Francisco        Subscriber  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All counts are as expected!\n"
+     ]
+    }
+   ],
    "source": [
     "# Process the data by running the function we wrote above.\n",
     "station_data = ['201402_station_data.csv']\n",
