--- a/Bay_Area_Bike_Share_Analysis.ipynb
+++ b/Bay_Area_Bike_Share_Analysis.ipynb
@@ -1370,7 +1370,7 @@
     "\n",
     "**Question 6**: Think of a topic or field of interest where you would like to be able to apply the techniques of data science. What would you like to be able to learn from your chosen subject?\n",
     "\n",
-    "**Answer**: Replace this text with your response!\n",
+    "**Answer**: I'm interested in using similarity matching to match transaction from known fraudulent vendors/employees against the rest the data set of transactions to possibly identify patterns making of frauds.\n",
     "\n",
     "> **Tip**: If we want to share the results of our analysis with others, we aren't limited to giving them a copy of the jupyter Notebook (.ipynb) file. We can also export the Notebook output in a form that can be opened even for those without Python installed. From the **File** menu in the upper left, go to the **Download as** submenu. You can then choose a different format that can be viewed more generally, such as HTML (.html) or\n",
     "PDF (.pdf). You may need additional packages or software to perform these exports."
